fix wrong width on auth record
fix wrong width on auth record

--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -5,7 +5,7 @@
 }
 
 .authority {
-  width: var(--danger);
+  width: 18px;
   height: 18px;
   background-color: var(--danger);
   border-radius: 25%;
